@@ -1,3 +1,7 @@
+2009-07-09  Doug Evans  <dje@sebabeach.org>
+
+	* utils.scm (message): Handle pairs.
+
 2009-06-24  Doug Evans  <dje@sebabeach.org>
 
 	* All *.scm files: Update copyright year.
